feat: implemented chat system v1

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-REACT_APP_API_KEY=AIzaSyB19wTQ4Q0rvbcZb_Pg30OiqO3mt7GrVlg
-REACT_APP_AUTH_DOMAIN=akoma-chat-app.firebaseapp.com
-REACT_APP_DATABASE_URL=akoma-chat-app
-REACT_APP_PROJECT_ID=http://akoma-chat-app.firebaseio.com
-REACT_APP_STORAGE_BUCKET=akoma-chat-app.appspot.com
-REACT_APP_MESSAGING_SENDER_ID=305349265426
-REACT_APP_APP_ID=1:305349265426:web:03cbc8dfc2293041b3f0cb
+VITE_API_KEY=AIzaSyB19wTQ4Q0rvbcZb_Pg30OiqO3mt7GrVlg
+VITE_AUTH_DOMAIN=akoma-chat-app.firebaseapp.com
+VITE_DATABASE_URL=akoma-chat-app
+VITE_PROJECT_ID=http://akoma-chat-app.firebaseio.com
+VITE_STORAGE_BUCKET=akoma-chat-app.appspot.com
+VITE_MESSAGING_SENDER_ID=305349265426
+VITE_APP_ID=1:305349265426:web:03cbc8dfc2293041b3f0cb
