--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^9.0.2",
+    "moment": "^2.29.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-router-dom": "^6.3.0",
-    "react-moment": "^1.1.1",
-    "firebase": "^9.0.2",
-    "moment": "^2.29.1"
+    "react-moment": "^1.1.2",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
